[SourceKit] Add local variables to structure (SR-5057)